hphp/hack/test/typecheck/expression_trees/reified_generic.php.exp
File "reified_generic.php", line 14, characters 8-15:
Static method calls on reified generics are not permitted in Expression Trees. (Typing[4440])
